HelloUltraviolet/Fixtures/RejectedSource/Procedures/InvariantDiagnostics/Source/Main.uv
//! Rejected invariant specimen for the invariant diagnostic surface.

public record InvariantDiagnosticOwner {
    public value: i32
} |: { self.value > 0 }
